# online-cinema

./: .dockerignore  .env-example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule.bak  docker-compose-prod.yml  docker-compose-tests.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 73c71e445006_init_tables.py  7db1c6842be1_init.py  8e0a7b8235e3_init.py  b23d4e21f62a_init.py
app/: main.py
app/celery_app/: __init__.py  celery_app.py  tasks.py
app/core/: __init__.py  database.py
app/core/config/: __init__.py  email_utils.py  settings.py
app/core/exceptions/: email.py  security.py
app/core/notifications/: emails.py  interfaces.py
app/core/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html  success_payment.html
app/core/validators/: __init__.py  accounts.py
app/models/: Base.py  __init__.py  accounts.py  cart.py  movies.py  order.py  payments.py
app/routes/: __init__.py  accounts.py  cart.py  directors.py  genres.py  movies.py  order.py  payments.py  stars.py
app/schemas/: accounts.py  cart.py  directors.py  genres.py  movies.py  order.py  payments.py  stars.py
app/security/: auth_dependencies.py  interfaces.py  password.py  token_manager.py  utils.py
app/tests/: conftest.py  test_accounts.py  test_cart.py  test_directors.py  test_genres.py  test_movies.py  test_order.py  test_payments.py  test_stars.py
