[project]
name = "fastapi-online-cinema"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Subchak",email = "subchak.maksym@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (==0.119.0)",
    "uvicorn (==0.37.0)",
    "sqlalchemy (==2.0.44)",
    "asyncpg (==0.30.0)",
    "email-validator (==2.3.0)",
    "pydantic (==2.12.0)",
    "python-jose (==3.5.0)",
    "passlib (==1.7.4)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "jinja2 (==3.1.6)",
    "stripe (==13.0.1)",
    "pydantic-settings (==2.11.0)",
    "aiosmtplib (==4.0.2)",
    "aiosqlite (==0.21.0)",
    "alembic (==1.17.0)",
    "amqp (==5.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "bcrypt (==5.0.0)",
    "billiard (==4.2.2)",
    "celery (==5.5.3)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.0)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "dnspython (==2.8.0)",
    "ecdsa (==0.19.1)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "httptools (==0.7.1)",
    "idna (==3.10)",
    "kombu (==5.5.4)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.3)",
    "packaging (==25.0)",
    "prompt-toolkit (==3.0.52)",
    "pyasn1 (==0.6.1)",
    "pycparser (==2.23)",
    "pydantic-core (==2.41.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "pyyaml (==6.0.3)",
    "redis (==5.2.1)",
    "requests (==2.32.5)",
    "rsa (==4.9.1)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "starlette (==0.48.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "vine (==5.1.0)",
    "watchfiles (==1.1.0)",
    "wcwidth (==0.2.14)",
    "websockets (==15.0.1)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
follow_imports = "skip"
